--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -6,6 +6,7 @@ After=network.target
 [Service]
 User=ubuntu
 Group=www-data
+RestartSec=5
 WorkingDirectory=/home/ubuntu/AirBnB_clone_v4
 ExecStart=/path/to/gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app >> /tmp/airbnb-access.log 2>> /tmp/airbnb-error.log
 Restart=always
