--- a/0x1A-application_server/gunicorn.service
+++ b/0x1A-application_server/gunicorn.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=gunicorn.service - AirBnB clone by B3zaleel run with Gunicorn.
+Description=gunicorn.service - AirBnB clone by Joel run with Gunicorn.
 After=network.target
 
 [Service]
@@ -12,7 +12,7 @@ Environment=HBNB_MYSQL_HOST=localhost
 Environment=HBNB_MYSQL_DB=hbnb_dev_db
 Environment=HBNB_TYPE_STORAGE=db
 Environment=HBNB_ENV=dev
-ExecStart=/home/ubuntu/.local/bin/gunicorn --workers 3 --error-logfile /tmp/airbnb-error.log --access-logfile /tmp/airbnb-access.log --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app
+ExecStart=/home/ubuntu/.local/bin/gunicorn -b 0.0.0.0:5003 -w 3 --access-logfile /tmp/airbnb-access.log --error-logfile /tmp/airbnb-error.log web_dynamic.2-hbnb:app
 
 [Install]
 WantedBy=multi-user.target
